--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
         <ul class="navigation hidden">
           <li class="navigation__card">
             <img class="navigation__card-img" src="./images/students.png" alt="students">
-            <button class="navigation__btn students" type="button">Студенти Гоґвортсу</button>
+            <a href="/students.html"><button class="navigation__btn students" type="button">Студенти Гоґвортсу</button></a>
           </li>
           <li class="navigation__card">
             <img class="navigation__card-img" src="./images/staff.png" alt="staff">
-            <button class="navigation__btn staff" type="button">Співробітники Гоґвортсу</button>
+            <a href=""><button class="navigation__btn staff" type="button">Співробітники Гоґвортсу</button></a>
           </li>
           <li class="navigation__card">
             <img class="navigation__card-img" src="./images/house.png" alt="by-house">
-            <button class="navigation__btn house" type="button">Персонажі в певному будинку</button>
+            <a href=""><button class="navigation__btn house" type="button">Персонажі в певному будинку</button></a>
           </li>
         </ul>
       </div>
     </main>
+    <script src="./js/api.js"></script>
     <script src="./js/navigation.js"></script>
   </body>
 </html>
