add staff & houses pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" href="favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.min.css" />
     <title>GM Harry Potter</title>
   </head>
@@ -17,19 +18,20 @@
         <ul class="navigation hidden">
           <li class="navigation__card">
             <img class="navigation__card-img" src="./images/students.png" alt="students">
-            <a href="/students.html"><button class="navigation__btn students" type="button">Студенти Гоґвортсу</button></a>
+            <a href="students.html"><button class="navigation__btn students" type="button">Студенти Гоґвортсу</button></a>
           </li>
           <li class="navigation__card">
             <img class="navigation__card-img" src="./images/staff.png" alt="staff">
-            <a href=""><button class="navigation__btn staff" type="button">Співробітники Гоґвортсу</button></a>
+            <a href="staff.html"><button class="navigation__btn staff" type="button">Співробітники Гоґвортсу</button></a>
           </li>
           <li class="navigation__card">
             <img class="navigation__card-img" src="./images/house.png" alt="by-house">
-            <a href=""><button class="navigation__btn house" type="button">Персонажі в певному будинку</button></a>
+            <a href="houses.html"><button class="navigation__btn house" type="button">Персонажі в певному будинку</button></a>
           </li>
         </ul>
       </div>
     </main>
+    
     <script src="./js/api.js"></script>
     <script src="./js/navigation.js"></script>
   </body>
