--- a/students.html
+++ b/students.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+    <link rel="icon" href="favicon.svg" type="image/x-icon">
     <script src="./js/api.js" defer></script>
 
     <title>Hogwarts Students</title>
